Cascade behavior for logical delete